# Calculator

./: README.md
turingcalcpkgvtwo/: README.md  pyproject.toml
turingcalcpkgvtwo/src/turingcalcpkgvtwo/: calculator.py
turingcalcpkgvtwo/tests/: test_calculator.py
