[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "turingcalcpkgvtwo"
version = "0.0.8"
authors = [
  { name="Steve Sedowski", email="angular.steve@gmail.com" },
]
description = "calculator package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"